# WaveSense

./: README.md  package-lock.json  package.json  pyproject.toml  webpack.config.js
config/: default.json
scripts/: copy-config.js
src/: App.css  App.js  Chart.js  Sidebar.js  functionGenerator.js  index.js  lockScreen.css  lockScreen.js  recordingWorker.js  server.js  signalGenerator.js  statsWorker.js
src/css/: App.css  FilterSettingsModal.css  darkMode.css  lockScreen.css
src/js/: App.js  Chart.js  DarkModeToggle.js  FilterSettings.js  FilterSettingsModal.js  FunctionGeneratorControl.js  MainApp.js  PicoServer.js  PlotPeriodogram.js  RouteController.js  SignalPlotter.js  SignalServer.js  functionGenerator.js  lockScreen.js  recordingWorker.js  server.js  signalGenerator.js
src/micropy/: OLED_test.py
src/micropy/server/: boot.py  main.py  main_v0.1.py  main_v0.2.py
src/micropy/server/backup/: main.py
src/py/: app.py  estimate_psd.py  periodogram.py  pred.py  train.py
src/py/data/known/: wavesense_react_voltage_data_15-8-2024_20_38.csv  wavesense_react_voltage_data_15-8-2024_20_40.csv  wavesense_react_voltage_data_15-8-2024_20_41.csv  wavesense_react_voltage_data_15-8-2024_20_42.csv  wavesense_signal_recording_2024-08-07T21-08-21-574Z.csv  wavesense_signal_recording_2024-08-07T21-11-33-381Z.csv  wavesense_signal_recording_2024-08-07T21-15-37-877Z.csv  wavesense_signal_recording_2024-08-08T00-24-41-171Z.csv
src/py/data/psd/: signal.csv
src/py/models/: random_forest_model.joblib  random_forest_model_label_encoder.joblib  random_forest_model_old.joblib
(+4 files in other folders)
